gl51-master/src/test/deca/context/valid/test-if.deca
{
    int a = 2;
    int b;
    if (a == 2){}

    if(a == 2) {
        b = a;
    } else if (a == 1) {
       b = 4;
    }
}