gl51-master/src/test/deca/context/invalid/test_rule3_37bis.deca
//Description
// Négation que sur boolean

{
    int a = 2;
    if(!a) {}//error car a non boolean
    //PASSED
}